# space-invaders

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AlienSprite.hpp  Buffer.hpp  BufferTexture.hpp  Shader.hpp  Sprite.hpp
lib/: CMakeLists.txt  Shader.cpp
